# UserStableVTables

./: Cargo.toml  LICENSE-MIT  README.md
src/: boxed.rs  lib.rs  ptr.rs  refs.rs  traits.rs
